--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     /> -->
 
     <!-- Custom CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <!-- <link rel="stylesheet" href="./fa/css/all.min.css" /> -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -39,8 +44,16 @@
           <li><a href="">RIWAYAT PENDIDIKAN</a></li>
           <li><a href="">HOBI</a></li>
           <li><a href="">KONTAK</a></li>
+          <!-- kalau di html yang lain arahinnya pake href="index2.html#ID" -->
         </ul>
       </div>
+    </div>
+
+    <div class="container mobile-menu-icon">
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg> -->
+      <i class="bi bi-list"></i>
     </div>
     <hr />
     <!-- ngebuat list -->
@@ -62,13 +75,17 @@
     </ol> -->
 
     <div class="container">
-         <iframe width="100%" height="300" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="test youtube">
-        </iframe>
-
+      <iframe
+        width="100%"
+        height="300"
+        src="https://www.youtube.com/embed/tgbNymZ7vqY"
+        title="test youtube"
+      >
+      </iframe>
     </div>
     <div id="profil" class="section-profile">
-        <div class="container grid-column-3">
-        <h2 >Profil Singkat</h2>
+      <div class="container grid-column-3">
+        <h2>Profil Singkat</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -89,16 +106,25 @@
     </div>
 
     <div class="container">
-        <div class="media">
-            <img src="https://randomuser.me/api/portraits/men/3.jpg" width="50%px" height="500px">
-            <iframe width="50%" height="500" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="test youtube">
-            </iframe>
-         </div>
+      <div class="media">
+        <img
+          src="https://randomuser.me/api/portraits/men/3.jpg"
+          width="50%px"
+          height="500px"
+        />
+        <iframe
+          width="50%"
+          height="500"
+          src="https://www.youtube.com/embed/tgbNymZ7vqY"
+          title="test youtube"
+        >
+        </iframe>
+      </div>
     </div>
     <!-- <img src="images/profil-pic.jpg" /><br /> -->
 
     <!-- VIDEO -->
- 
+
     <!-- ANTISIPASI KALAU ERROR -->
     <!-- <source src="video/mov_bbb.mp4" type="video/ogg">
         Your browser does not support HTML video.
@@ -107,62 +133,62 @@
     <br> -->
 
     <!-- DARI YOUTUBE -->
-   
+
     <!-- TABLE -->
     <div class="section-biodata">
-        <div class="container">
-            <h2 id="biodata">Biodata</h2>
-            <table>
-            <!-- Tr adalah table row -->
-            <tr>
-                <th>Nama</th>
-                <th>Hobi</th>
-                <th>Makanan Favorit</th>
-            </tr>
-            <!-- TD buat isi dari table -->
-            <tr>
-                <td>Dwi</td>
-                <td>Bersepeda</td>
-                <td>Ayam Goreng</td>
-            </tr>
-            <tr>
-                <td>Dwi</td>
-                <td>Bersepeda</td>
-                <td>Ayam Goreng</td>
-            </tr>
-            <tr>
-                <td>Dwi</td>
-                <td>Bersepeda</td>
-                <td>Ayam Goreng</td>
-            </tr>
-            </table>
-        </div>
+      <div class="container">
+        <h2 id="biodata">Biodata</h2>
+        <table>
+          <!-- Tr adalah table row -->
+          <tr>
+            <th>Nama</th>
+            <th>Hobi</th>
+            <th>Makanan Favorit</th>
+          </tr>
+          <!-- TD buat isi dari table -->
+          <tr>
+            <td>Dwi</td>
+            <td>Bersepeda</td>
+            <td>Ayam Goreng</td>
+          </tr>
+          <tr>
+            <td>Dwi</td>
+            <td>Bersepeda</td>
+            <td>Ayam Goreng</td>
+          </tr>
+          <tr>
+            <td>Dwi</td>
+            <td>Bersepeda</td>
+            <td>Ayam Goreng</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <br /><br />
 
     <!-- FORM -->
     <div class="container">
-        <form >
-            <div class="form-group">
-                <label for="">Nama Lengkap</label>
-                <input type="text" placeholder="Isi dengan nama lengkap" />
-            </div>
-            <div class="form-group">
-                <label for="">Email</label>
-                <input type="email" placeholder="Gunakan email aktif" />
-            </div>
-            <div class="form-group">
-                <label for="">Pilih Tanggal Meeting</label>
-                <input type="date" placeholder="Isi tanggal berikut" />
-            </div>
+      <form>
+        <div class="form-group">
+          <label for="">Nama Lengkap</label>
+          <input type="text" placeholder="Isi dengan nama lengkap" />
+        </div>
+        <div class="form-group">
+          <label for="">Email</label>
+          <input type="email" placeholder="Gunakan email aktif" />
+        </div>
+        <div class="form-group">
+          <label for="">Pilih Tanggal Meeting</label>
+          <input type="date" placeholder="Isi tanggal berikut" />
+        </div>
 
-            <div class="form-group">
-                <label for="">Pesan</label><br>
-                <textarea type="textarea" rows="10"></textarea>
-            </div>
+        <div class="form-group">
+          <label for="">Pesan</label><br />
+          <textarea type="textarea" rows="10"></textarea>
+        </div>
 
-            <button type="submit" class="button-primary">Submit</button>
-        </form>
+        <button type="submit" class="button-primary">Submit</button>
+      </form>
     </div>
   </body>
 </html>
